feat: deleteClub
